--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,20 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 .backgroundContainer{
+    width: 50%;
+    background:#CF0117;
+    margin: 0 auto;
+    border-radius: 20px;
+}
+
+h1{
+    font-family: 'Tangerine', cursive;
+    font-weight: 700;
+    font-size:5rem;
+    padding-top:10px;
+    text-align: center;
+    color:#F4B51E;
+    margin:0;
 }
 
 .container::before {
@@ -20,14 +34,13 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 }
 
 .container::before {
-  padding-top: 75%;
+  padding-top: 55%;
 }
 
 .container{
     display: flex;
-    width: 40%;
+    width: 80%;
     margin: 0 auto;
-    padding: 5% 0;
 }
 
 .column{
@@ -39,4 +52,29 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 .pixel{
     border:1px solid black;
     flex-grow: 1;
+    background:white;
+}
+
+.bottomRow{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+img{
+    margin-bottom: 20px
+}
+
+button{
+    border:none;
+    background:#352e2e;
+    border-radius:5px;
+    color:#F4B51E;
+    font-size:1.5rem;
+    transition: all 0.6s;
+}
+
+.selected{
+    background: #F4B51E;
+    color:#352e2e;
 }
